--- a/src/config.xml.tmpl
+++ b/src/config.xml.tmpl
@@ -1,22 +1,23 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="com.example.hello" version="1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    <name>FamilyPhotoFrame</name>
+    <name>SharedPhotoFrame</name>
     <description>
         Your App description.
     </description>
-    <author email="kampe@kondespro.com" href="http://familyphotoframe.com">
+    <author email="kampe@kondespro.com" href="http://sharedphotoframe.com">
         Your name
     </author>
     <access origin="*" />
 
     <!-- Override PhoneGap default configurations here -->
-    <preference name="UIWebViewBounce" value="false" />
     <preference name="AutoHideSplashScreen" value="false" />
     <preference name="KeyboardDisplayRequiresUserAction" value="false" />
     <preference name="ShowSplashScreenSpinner" value="false" />
 
     <preference name="iosPersistentFileLocation" value="Library" />
     <preference name="DisallowOverscroll" value="true" />
+    <preference name="UIWebViewBounce" value="false" />
+    <preference name="fullscreen" value="true" />
 
 
 </widget>
