--- a/src/html/layouts/application.tmpl
+++ b/src/html/layouts/application.tmpl
@@ -4,7 +4,7 @@
   <title><%= appName %></title>
   <meta charset="utf-8">
   <meta name="format-detection" content="telephone=no" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1 user-scalable=no,">
   <link rel="icon" type="image/png" href="img/favicon.png">
 
 <% if (env == 'development') {
