--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -48,8 +48,8 @@
 
         <p data-translate="INFO_NEED_MORE"></p>
 
-        <p data-ng-click="go('settings/upgrade/option1', 'slide-left', true)"
-           data-translate="NAVI_GO_UPGRADE"></p>
+        <button class="btn--blue" data-ng-click="go('settings/upgrade/option1', 'slide-left', true)"
+           data-translate="NAVI_GO_UPGRADE"></button>
 
       </div>
 
