--- a/src/html/partials/get-gallery/get-gallery-2.html
+++ b/src/html/partials/get-gallery/get-gallery-2.html
@@ -11,11 +11,11 @@
            data-ng-class="{'error': galleryKeyError}"
            style="width:200px;"
            type="password"
-           data-ng-model="galleryCredentials.galleryKey"/>
+           data-ng-model="galleryCredentials.galleryAccessPassword"/>
 
     <div
         data-number-pad-directive
-        data-number-pad-input="galleryCredentials.galleryKey"
+        data-number-pad-input="galleryCredentials.galleryAccessPassword"
         data-number-pad-input-length="6"
         data-number-pad-submit="onGetGalleryStep2Submit()">
     </div>
