--- a/src/html/partials/settings/upgrade/landing.html
+++ b/src/html/partials/settings/upgrade/landing.html
@@ -13,7 +13,7 @@
           Erhöhen Sie die Anzahl der erlaubten Fotorahmen und Fotos.
         </span>
         <span class="settings__item-info-action"
-              data-ng-click="go('settings/upgrade/limits-1', '')"
+              data-ng-click="go('settings/upgrade/limits-1', 'true')"
               data-translate="ACTION_CONTINUE"></span>
       </div>
     </div>
@@ -26,7 +26,7 @@
           Ermöglichen Sie anderen ebenfalls Fotos zu Ihren Fotorahmen hinzuzufügen.
         </span>
         <span class="settings__item-info-action"
-              data-ng-click="go('settings/upgrade/feature-1', '')"
+              data-ng-click="go('settings/upgrade/feature-1', 'true')"
               data-translate="ACTION_CONTINUE"></span>
       </div>
     </div>
