--- a/src/html/partials/share-gallery/sharing.html
+++ b/src/html/partials/share-gallery/sharing.html
@@ -16,7 +16,7 @@
     <div class="settings__item-info" data-ng-if="showAccessKey">
       <span class="settings__item-info-label">&nbsp;</span>
     <span
-        class="settings__item-info-value access-code" data-ng-bind="gallery.galleryKey"></span>
+        class="settings__item-info-value access-code" data-ng-bind="gallery.accessPassword"></span>
 
     </div>
   </div>
