--- a/src/html/partials/home/index.html
+++ b/src/html/partials/home/index.html
@@ -2,21 +2,21 @@
 <div class="center">
 
   <div class="grid home-menu">
-    <div class="grid__item one-whole lap-and-up-one-third home-menu__item home-menu__item--create"
+    <div class="grid__item one-whole desk-one-third home-menu__item home-menu__item--create"
          data-ng-click="go('/create-gallery', 'slide-left')">
       <div class="home-menu__item-inner">
         <span class="home-menu__item-title" data-translate="TITLE_NEW"></span>
         <span class="home-menu__item-icon icon-add"></span>
       </div>
     </div>
-    <div class="grid__item one-whole lap-and-up-one-third home-menu__item home-menu__item--import"
+    <div class="grid__item one-whole desk-one-third home-menu__item home-menu__item--import"
          data-ng-click="go('/get-gallery', 'slide-left')">
       <div class="home-menu__item-inner">
         <span class="home-menu__item-title" data-translate="TITLE_IMPORT"></span>
         <span class="home-menu__item-icon icon-download"></span>
       </div>
     </div>
-    <div class="grid__item one-whole lap-and-up-one-third home-menu__item home-menu__item--select"
+    <div class="grid__item one-whole desk-one-third home-menu__item home-menu__item--select"
          data-ng-click="go('/select-gallery', 'slide-left')">
       <div class="home-menu__item-inner">
         <span class="home-menu__item-title" data-translate="TITLE_SHOW_GALLERIES"></span>
