--- a/src/html/layouts/application.tmpl
+++ b/src/html/layouts/application.tmpl
@@ -31,7 +31,7 @@
   <div data-ng-if="message.title" data-message-directive data-message="message" data-message-type="{{message.type}}"></div>
 
   <div id="container" class="container">
-    <div data-ng-class="{'show-ctrls': showCtrls}" class="page {{ animationClass }} {{ pageClass }}  " data-ng-view data-ng-animate-children></div>
+    <div data-ng-class="{'show-ctrls': showCtrls}" class="page {{ animationClass }} {{ pageClass }}  " data-ui-view data-ng-animate-children></div>
   </div>
 
   <script type="text/javascript">
