--- a/src/html/partials/settings/upgrade/index.html
+++ b/src/html/partials/settings/upgrade/index.html
@@ -1,14 +1,35 @@
-<div data-ng-switch="settingsSection2" data-ng-controller="upgradeController">
-  <div data-ng-switch-default>
-    <div data-ng-include="'html/partials/settings/upgrade/landing.html'"></div>
+<h2 data-translate="TITLE_UPGRADE"></h2>
+
+<p data-translate="INFO_UPGRADE"></p>
+
+<div class="settings">
+  <div class="settings__block">
+
+    <div class="settings__item">
+      <span class="settings__item-label" data-translate="">Limits-Upgrade: Mehr Fotorahmen, mehr Fotos!</span>
+
+      <div class="settings__item-info">
+        <span class="settings__item-info-label" data-translate="">
+          Erhöhen Sie die Anzahl der erlaubten Fotorahmen und Fotos.
+        </span>
+        <a class="settings__item-info-action"
+              data-ui-sref="settings.upgrade.limits-1"
+              data-translate="ACTION_CONTINUE"></a>
+      </div>
+    </div>
+
+    <div class="settings__item">
+      <span class="settings__item-label" data-translate="">Feature-Upgrade: Gemeinsames bearbeiten</span>
+
+      <div class="settings__item-info">
+        <span class="settings__item-info-label" data-translate="">
+          Ermöglichen Sie anderen ebenfalls Fotos zu Ihren Fotorahmen hinzuzufügen.
+        </span>
+        <span class="settings__item-info-action"
+              data-ng-click="go('settings/upgrade/feature-1', 'true')"
+              data-translate="ACTION_CONTINUE"></span>
+      </div>
+    </div>
   </div>
-  <div data-ng-switch-when="landing">
-    <div data-ng-include="'html/partials/settings/upgrade/landing.html'"></div>
-  </div>
-  <div data-ng-switch-when="limits-1">
-    <div data-ng-include="'html/partials/settings/upgrade/limits-1.html'"></div>
-  </div>
-  <div data-ng-switch-when="feature-1">
-    <div data-ng-include="'html/partials/settings/upgrade/feature-1.html'"></div>
-  </div>
+
 </div>
