--- a/src/html/partials/share-gallery/index.html
+++ b/src/html/partials/share-gallery/index.html
@@ -1,44 +1,34 @@
 <div class="top">
-  <div class="top__inner">
-    <h1 class="top__title">{{'TITLE_SHARING' | translate}}</h1>
-    <span class="top__icon-back icon-back" data-ng-click="go('edit-gallery', 'slide-right', true)"></span>
+    <div class="top__inner">
+        <h1 class="top__title">{{'TITLE_SHARING' | translate}}</h1>
+        <span class="top__icon-back icon-back" data-ng-click="go('edit-gallery', 'slide-right', true)"></span>
     <span class="float-right" data-ng-click="go('settings', 'slide-left')">
     <img style="width:30px; position:relative; top:-12px; cursor:pointer;" src="img/settings.png"/>
   </span>
-  </div>
+    </div>
 </div>
 
 <div class="center center--show-top">
-  <div class="center__inner">
+    <div class="center__inner">
 
-    <div class="grid full-height">
-      <div class="grid__item one-third full-height soft--right">
+        <div class="grid full-height">
+            <div class="grid__item one-third full-height soft--right">
 
-        <ul class="settings-menu">
-          <li class="settings-menu__item"
-              data-ng-class="{'active': sharingSection1 == 'sharing' || !sharingSection1}"
-              data-ng-click="go('share-gallery/sharing', '')">{{'NAVI_SHARING_CREDENTIALS' | translate}}
-          </li>
-          <li class="settings-menu__item"
-              data-ng-class="{'active': sharingSection1 == 'options'}"
-              data-ng-click="go('share-gallery/options', '')">{{'NAVI_OPTIONS' | translate}}
-          </li>
-        </ul>
-      </div>
+                <ul class="settings-menu">
+                    <li class="settings-menu__item"
+                        data-ng-class="{'active': sharingSection1 == 'sharing' || !sharingSection1}"
+                        data-ng-click="go('share-gallery/sharing', '')">{{'NAVI_SHARING_CREDENTIALS' | translate}}
+                    </li>
+                    <li class="settings-menu__item"
+                        data-ng-class="{'active': sharingSection1 == 'options'}"
+                        data-ng-click="go('share-gallery/options', '')">{{'NAVI_OPTIONS' | translate}}
+                    </li>
+                </ul>
+            </div>
 
-      <div class="grid__item two-thirds full-height soft--left" data-ng-switch="sharingSection1">
-        <div data-ng-switch-default>
-          <div data-ng-include="'html/partials/share-gallery/sharing.html'"></div>
+            <div class="grid__item two-thirds full-height soft--left" data-ui-view></div>
         </div>
-        <div data-ng-switch-when="sharing">
-          <div data-ng-include="'html/partials/share-gallery/sharing.html'"></div>
-        </div>
-        <div data-ng-switch-when="options">
-          <div data-ng-include="'html/partials/share-gallery/options.html'"></div>
-        </div>
-      </div>
+
     </div>
-
-  </div>
 
 </div>
